--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0028)https://cubhouse.fr/#program -->
 <html lang="en" translate="no"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
+        <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="" async></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="icon" type="image/svg+xml" href="https://cubhouse.fr/build/assets/icon-77b80d21.png" inertia="">
